devops/terraform/security.tf
data "http" "my_ip" {
  url = "http://ifconfig.me"
}

resource "aws_security_group" "instance_sg" {
  name        = "${terraform.workspace}-app-sg"
  description = "Allow TLS, HTTP, and SSH traffic"
  vpc_id      = aws_vpc.main.id

  # Ingress = Inbound traffic
  ingress {
    description = "HTTPS from anywhere"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP from anywhere"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH from my IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${data.http.my_ip.response_body}/32"]
  }

  # Egress = Outbound traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1" # Allow all outbound traffic
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${terraform.workspace}-app-sg"
  }
}
